--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -33,14 +33,14 @@ jobs:
     - name: Set up JDK 25
       uses: actions/setup-java@v4
       with:
-        java-version: '25'
+        java-version: '24'
         distribution: 'temurin'
 
           # install Gradle (WITHOUT wrapper)
     - name: Setup Gradle
       uses: gradle/actions/setup-gradle@v4
       with:
-        gradle-version: 9.3
+        gradle-version: "8.5"
     # build project
     - name: Build with Gradle
       run: gradle build
