--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -13,10 +13,17 @@ on:
   pull_request:
     branches: [ "main" ]
     
-permissions:
-  contents: read
+
 jobs:
   build:
+    permissions: 
+      contents: read
+    env:
+      DISPLAY: ":99.0"
+    services:
+      xvfb:
+        image: selenium/standalone-chrome:latest
+        options: -e VNC_SERVER=true-e VNC_PORT=5900
     strategy:
       matrix:
         os: [ubuntu-latest, windows-latest, macos-latest]
@@ -35,8 +42,10 @@ jobs:
       with:
         java-version: '24'
         distribution: 'temurin'
-
-          # install Gradle (WITHOUT wrapper)
+        
+    - name: Start Xvfb
+      run: Xvfb $DISPLAY-ac-screen 0 1600x1200x24 > /dev/null 2>&1 &
+      
     - name: Setup Gradle
       uses: gradle/actions/setup-gradle@v4
       with:
