--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -28,12 +28,9 @@ jobs:
     #   matrix:
     #     os: [ubuntu-latest, windows-latest, macos-latest]
 
-    #runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        os: [ubuntu-latest, windows-latest, macos-latest]
+    runs-on: ubuntu-latest
     
-    runs-on: ${{ matrix.os }}
+    #runs-on: ${{ matrix.os }}
 
       
 
