--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -33,34 +33,41 @@ jobs:
     #runs-on: ${{ matrix.os }}
 
       
-
     steps:
-        # checkout latest version
     - name: Checkout repository
       uses: actions/checkout@v4
-      
-    - uses: actions/checkout@v4
+  
     - name: Set up JDK 21
       uses: actions/setup-java@v4
       with:
         java-version: '21'
         distribution: 'temurin'
-        
+  
     - name: Start Xvfb
       run: Xvfb $DISPLAY -ac -screen 0 1600x1200x24 > /dev/null 2>&1 &
-      
+  
     - name: Setup Gradle
       uses: gradle/actions/setup-gradle@v5
       with:
         gradle-version: "8.5"
-    # build project
+  
     - name: Build with Gradle
-      run: gradle build # upload test reports
+      run: gradle build
+  
     - name: Upload test reports
+      if: always()
       uses: actions/upload-artifact@v4
       with:
         name: Test-Reports
         path: build/reports/tests/
+  
+    - name: Publish test report summary
+      if: always()
+      run: |
+        echo "## Test report" >> $GITHUB_STEP_SUMMARY
+        echo "- Artifact: **Test-Reports** (download it from the Artifacts section of this run)" >> $GITHUB_STEP_SUMMARY
+        echo "- HTML entry point: \`build/reports/tests/test/index.html\`" >> $GITHUB_STEP_SUMMARY
+
       
     # NOTE: The Gradle Wrapper is the default and recommended way to run Gradle (https://docs.gradle.org/current/userguide/gradle_wrapper.html).
     # If your project does not have the Gradle Wrapper configured, you can use the following configuration to run Gradle with a specified version.
