--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -60,7 +60,7 @@ jobs:
       uses: actions/upload-artifact@v4
       with:
         name: Test-Reports
-        path: build/reports/tests/
+        path: build/reports/tests
   
      #- name: Publish test report summary
       # if: always()
