--- a/.github/workflows/pmd.yml
+++ b/.github/workflows/pmd.yml
@@ -11,8 +11,7 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
       - name: Run PMD
         id: pmd
@@ -26,3 +25,7 @@ jobs:
           echo "## PMD Analysis Report" >> $GITHUB_STEP_SUMMARY
           echo "- Violations: ${{ steps.pmd.outputs.violations }}" >> $GITHUB_STEP_SUMMARY
           echo "- Files scanned: ${{ steps.pmd.outputs.files }}" >> $GITHUB_STEP_SUMMARY
+
+      - name: Fail if violations > 0
+        if: steps.pmd.outputs.violations > 0
+        run: exit 1
